@@ -37,7 +37,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -101,7 +100,7 @@ public class DependencyResolver {
                 .filter(f -> f instanceof ModuleFilter)
                 .map(ModuleFilter.class::cast)
                 .filter(f -> FilterCriteria.Matcher.EQUALS.equals(f.getCriteria().getMatcher()))
-                .collect(toList());
+                .toList();
 
         if (isModulesDisabled(filters) && !moduleFilters.isEmpty()) {
             throw new DependencyResolutionException("Modularity is disabled.", new ModularityDisabledException());
@@ -136,7 +135,7 @@ public class DependencyResolver {
     private DependencyResolutionResult resolveModularDependencies(List<ModuleFilter> filters)
             throws DependencyResolutionException {
         List<Channel> sources = this.getActiveSources();
-        List<Module> modules = filters.stream().map(ModuleFilter::getModule).collect(toList());
+        List<Module> modules = filters.stream().map(ModuleFilter::getModule).toList();
         ModulePackagesResponse modPkgList;
         try {
             modPkgList = modulemdApi.getPackagesForModules(sources, modules);
@@ -145,7 +144,7 @@ public class DependencyResolver {
             throw new DependencyResolutionException("Failed to resolve modular dependencies.", e);
         }
 
-        List<Module> resolvedModules = modPkgList.getSelected().stream().map(Module::new).collect(Collectors.toList());
+        List<Module> resolvedModules = modPkgList.getSelected().stream().map(Module::new).toList();
 
         // 1. Modular packages to be denied
         PackageFilter pkgDenyFilter = new ModularPackageFilter();
@@ -202,7 +201,7 @@ public class DependencyResolver {
                 .filter(Optional::isPresent)
                 .map(s -> s.get().getChannel())
                 .filter(Channel::isModular)
-                .collect(toList());
+                .toList();
     }
 
 }
