@@ -70,7 +70,7 @@ public class TokenCleanup extends RhnJavaJob {
                 }
             });
 
-            List<String> changedMinionIds = changedMinions.map(MinionServer::getMinionId).collect(Collectors.toList());
+            List<String> changedMinionIds = changedMinions.map(MinionServer::getMinionId).toList();
             if (Config.get().getBoolean(ConfigDefaults.TOKEN_REFRESH_AUTO_DEPLOY)) {
                 saltApi.deployChannels(changedMinionIds);
             }
