@@ -180,7 +180,7 @@ public class SaltServerActionServiceTest extends JMockBaseTestCaseWithUser {
         mins.add(testMinionServer);
 
         List<MinionSummary> minionSummaries = mins.stream().
-                map(MinionSummary::new).collect(Collectors.toList());
+                map(MinionSummary::new).toList();
 
         Channel channel = ChannelFactoryTest.createTestChannel(user);
         Package p64 = ErrataTestUtils.createTestPackage(user, channel, "x86_64");
@@ -226,7 +226,7 @@ public class SaltServerActionServiceTest extends JMockBaseTestCaseWithUser {
         mins.add(testMinionServer);
 
         List<MinionSummary> minionSummaries = mins.stream().
-                map(MinionSummary::new).collect(Collectors.toList());
+                map(MinionSummary::new).toList();
 
         Channel channel = ChannelFactoryTest.createTestChannel(user);
         Package p64 = ErrataTestUtils.createTestPackage(user, channel, "x86_64");
@@ -272,7 +272,7 @@ public class SaltServerActionServiceTest extends JMockBaseTestCaseWithUser {
         mins.add(testMinionServer);
 
         List<MinionSummary> minionSummaries = mins.stream().
-                map(MinionSummary::new).collect(Collectors.toList());
+                map(MinionSummary::new).toList();
 
         Channel channel = ChannelFactoryTest.createTestChannel(user);
         SystemManager.subscribeServerToChannel(user, testMinionServer, channel);
@@ -324,7 +324,7 @@ public class SaltServerActionServiceTest extends JMockBaseTestCaseWithUser {
         mins.add(testMinionServer);
 
         List<MinionSummary> minionSummaries = mins.stream().
-                map(MinionSummary::new).collect(Collectors.toList());
+                map(MinionSummary::new).toList();
 
         Channel channel = ChannelFactoryTest.createTestChannel(user);
         Package p = ErrataTestUtils.createTestPackage(user, channel, "amd64-deb");
@@ -368,7 +368,7 @@ public class SaltServerActionServiceTest extends JMockBaseTestCaseWithUser {
         mins.add(testMinionServer);
 
         List<MinionSummary> minionSummaries = mins.stream().
-                map(MinionSummary::new).collect(Collectors.toList());
+                map(MinionSummary::new).toList();
 
         Channel channel = ChannelFactoryTest.createTestChannel(user);
         Package p1 = ErrataTestUtils.createTestPackage(user, channel, "amd64-deb");
@@ -426,7 +426,7 @@ public class SaltServerActionServiceTest extends JMockBaseTestCaseWithUser {
         mins.add(testMinion);
 
         List<MinionSummary> minionSummaries = mins.stream().
-                map(MinionSummary::new).collect(Collectors.toList());
+                map(MinionSummary::new).toList();
 
         Channel channel = ChannelFactoryTest.createTestChannel(user);
         Package p1 = ErrataTestUtils.createTestPackage(user, channel, "x86_64");
