@@ -20,7 +20,6 @@ import org.apache.commons.lang3.builder.EqualsBuilder;
 import org.apache.commons.lang3.builder.HashCodeBuilder;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 /**
@@ -175,15 +174,14 @@ public class ConfigChannelJson {
     public static List<ConfigChannelJson> listOrdered(List<ConfigChannel> channelsIn) {
         return IntStream.range(0, channelsIn.size())
                 .mapToObj(i -> new ConfigChannelJson(channelsIn.get(i), i + 1))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public boolean equals(Object other) {
-        if (!(other instanceof ConfigChannelJson)) {
+        if (!(other instanceof ConfigChannelJson castOther)) {
             return false;
         }
-        ConfigChannelJson castOther = (ConfigChannelJson) other;
         return new EqualsBuilder()
                 .append(name, castOther.name)
                 .append(label, castOther.label)
